--- a/lessonspaper.html
+++ b/lessonspaper.html
@@ -55,6 +55,9 @@ The following items are supplementary data for the paper as detailed in the Supp
 <a href="PsuGeometry/Paper01/Results2_tau_nc_prob.html">N:C/Tau Probability</a><br/>
 --
 <a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/Paper01/Results2_bimodaltau.py">Code</a>
+ <br/><a href="PsuGeometry/Paper01/Results11_angle_ramas.html">Ramachandran for each backbone angle</a><br/>
+ <br/><a href="PsuGeometry/Paper01/Results11_angle_scatters.html">(Large file) Scatter correltions for each backbone angle</a><br/>
+ <br/><a href="PsuGeometry/Paper01/Results11_angle_histograms.html">Histogram for each backbone angle</a><br/>
  </p>
 </li>
 
