--- a/lessonspaper.html
+++ b/lessonspaper.html
@@ -56,8 +56,8 @@ The following items are supplementary data for the paper as detailed in the Supp
 --
 <a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/Paper01/Results2_bimodaltau.py">Code</a>
  <br/><a href="PsuGeometry/Paper01/Results11_angle_ramas.html">Ramachandran for each backbone angle</a><br/>
- <br/><a href="PsuGeometry/Paper01/Results11_angle_scatters.html">(Large file) Scatter correltions for each backbone angle</a><br/>
- <br/><a href="PsuGeometry/Paper01/Results11_angle_histograms.html">Histogram for each backbone angle</a><br/>
+ <a href="PsuGeometry/Paper01/Results11_angle_scatters.html">(Large file) Scatter correltions for each backbone angle</a><br/>
+ <a href="PsuGeometry/Paper01/Results11_angle_histograms.html">Histogram for each backbone angle</a><br/>
  </p>
 </li>
 
