--- a/lessonspaper.html
+++ b/lessonspaper.html
@@ -53,6 +53,10 @@ The following items are supplementary data for the paper as detailed in the Supp
 <a href="PsuGeometry/Paper01/Results2_tau_phi_prob.html">Phi/Tau Probability</a><br/>
 <a href="PsuGeometry/Paper01/Results2_tau_omega_prob.html">Omega/Tau Probability</a><br/>
 <a href="PsuGeometry/Paper01/Results2_tau_nc_prob.html">N:C/Tau Probability</a><br/>
+<a href="PsuGeometry/Paper01/Results2_ALA_tau.html">Many correlations for ALA with tau and psi</a><br/>
+<a href="PsuGeometry/Paper01/Results2_GLY_tau.html">Many correlations for GLY with tau and psi</a><br/>
+<a href="PsuGeometry/Paper01/Results2_ALA_taucorr.html">Cross correlations for ALA hued on tau and psi</a><br/>
+<a href="PsuGeometry/Paper01/Results2_GLY_taucorr.html">Cross correlations for GLY hued on tau and psi</a><br/>
 --
 <a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/Paper01/Results2_bimodaltau.py">Code</a>
  <br/><a href="PsuGeometry/Paper01/Results11_angle_ramas.html">Ramachandran for each backbone angle</a><br/>
