--- a/secret.html
+++ b/secret.html
@@ -79,7 +79,8 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 <button type="button" class="collapsible">Universal</button>
 <div class="content">
 <p>Hopefully cross platform and installs on Linux</p>
-<li><a href="https://rachelalcraft.github.io/DensityFlightUniversal/setup.exe">Density Flight</a></li>
+<li><a href="https://rachelalcraft.github.io/DensityFlightUniversal/install/publish.7z">Density Flight 7z</a></li>
+<li><a href="https://rachelalcraft.github.io/DensityFlightUniversal/install/publish.zip">Density Flight zip</a></li>
 </div>
 <h3>Links</h3>
 <button type="button" class="collapsible">Data</button>
