--- a/secret.html
+++ b/secret.html
@@ -82,6 +82,7 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 chmod +x DensityFlightUniversal<br/>
 ./YourProjectName
 <li><a href="https://rachelalcraft.github.io/DensityFlightUniversal/install/DensityFlight.zip">Density Flight zip</a></li>
+<li><a href="https://rachelalcraft.github.io/DensityFlightUniversal/install/DensityFlight.7z">Density Flight 7z</a></li>
 </div>
 <h3>Links</h3>
 <button type="button" class="collapsible">Data</button>
