--- a/secret.html
+++ b/secret.html
@@ -78,8 +78,8 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 </div>
 <button type="button" class="collapsible">Universal</button>
 <div class="content">
-<p>Hopefully cross platform and installs on Linux. To installextract to a folder. Open a terminal in the folder, and then type:</p><br/>
-chmod +x DensityFlightUniversal<br/>
+<p>Hopefully cross platform and installs on Linux. To installextract to a folder. Open a terminal in the folder, and then type:<br/>
+chmod +x DensityFlightUniversal<br/></p>
 ./YourProjectName
 <li><a href="https://rachelalcraft.github.io/DensityFlightUniversal/install/DensityFlight.zip">Density Flight zip</a></li>
 <li><a href="https://rachelalcraft.github.io/DensityFlightUniversal/install/DensityFlight.7z">Density Flight 7z</a></li>
