--- a/secret.html
+++ b/secret.html
@@ -67,9 +67,13 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 <hr/>
 <h1>In the cloud but not published</h1>
 <hr/>
-<h3>Description</h3>
+<h3>Private Links</h3>
+<p>
+<a href="tau_radiant.html">Tau and electron density</a><br/>
+</p>
+<hr/>
+<h3>Private Software</h3>
 <p>Install links for Density Flight (windows) and Density Flight Universal (cross platform, hopefully).</p>
-<p>Links to data in the cloud not published</p>
 <hr/>
 <h3>Density Flight</h3>
 <button type="button" class="collapsible">Windows only</button>
