--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -75,11 +75,11 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 <div class="content">
 <p>5 sets of pdbs in different categories</p>
 <ul>
-<li><a href="PsuGeometry/PaperTau/Set1_ccp4_slices.html">Extreme tau values around PSI=0</a><br/></li>
-<li><a href="PsuGeometry/PaperTau/Set2_ccp4_slices.html">Long N:N+1 with +ve PSI near 180</a><br/></li>
-<li><a href="PsuGeometry/PaperTau/Set3_ccp4_slices.html">Long N:N+1 with -ve PSI near 180</a><br/></li>
-<li><a href="PsuGeometry/PaperTau/Set4_ccp4_slices.html">Short N:N+1 with PSI near <0</a><br/></li>
-<li><a href="PsuGeometry/PaperTau/Set4_ccp4_slices.html">Short N:N+1 with PSI near >10</a><br/></li>
+<li><a href="PsuGeometry/PaperTau/Set1_ccp4_slices.html">Set 1: Extreme tau values around PSI=0</a><br/></li>
+<li><a href="PsuGeometry/PaperTau/Set2_ccp4_slices.html">Set 2: Long N:N+1 with +ve PSI near 180</a><br/></li>
+<li><a href="PsuGeometry/PaperTau/Set3_ccp4_slices.html">Set 3: Long N:N+1 with -ve PSI near 180</a><br/></li>
+<li><a href="PsuGeometry/PaperTau/Set4_ccp4_slices.html">Set 4: Short N:N+1 with PSI near <0</a><br/></li>
+<li><a href="PsuGeometry/PaperTau/Set5_ccp4_slices.html">Set 5: Short N:N+1 with PSI near >10</a><br/></li>
 </ul>
 </div>
 
