--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -81,6 +81,10 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 <li><a href="PsuGeometry/PaperTau/Set4_ccp4_slices.html">Set 4: Short N:N+1 with PSI near <0</a><br/></li>
 <li><a href="PsuGeometry/PaperTau/Set5_ccp4_slices.html">Set 5: Short N:N+1 with PSI near >10</a><br/></li>
 </ul>
+
+<p>References</p>
+<li><a href="https://chemistry.mcmaster.ca/aim/aim_0.html">Richard Bader: Atoms in Molecules</a><br/></li>
+<li><a href="https://chemtools.org/sci_doc_dftbased_dens.html">Electron density derivatives</a><br/></li>
 </div>
 
 <hr/>
