Added high res set

--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -134,6 +134,7 @@ The possible causes of variation on the tau angle can be inspected by the sepera
 <li><a href="PaperTau/Set3_ccp4_slices.html">Set 3: Long N:N+1 with -ve PSI near 180</a><br/></li>
 <li><a href="PaperTau/Set4_ccp4_slices.html">Set 4: Short N:N+1 with PSI near <0</a><br/></li>
 <li><a href="PaperTau/Set5_ccp4_slices.html">Set 5: Short N:N+1 with PSI near >10</a><br/></li>
+<li><a href="PaperTau/Set6_ccp4_slices.html">Set 6: Highest resolution with tau differences</a><br/></li>
 </ul>
 <hr/>
 <p>References</p>
