Added 6 categories of data

--- a/PaperTau/Category2.html
+++ b/PaperTau/Category2.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><html lang="en"><head><title>PSU-_Results_ccp4_slices-GEO</title>
+<!DOCTYPE html><html lang="en"><head><title>PSU-_Cat2Results_ccp4_slices-GEO</title>
 <style> body {text-align:center;background-color:LightSteelBlue ;} img {width:95% }table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;background-color:LightSteelBlue ;} td {border:1px solid MistyRose;background-color:AliceBlue;}</style></head>
-<body><h1>Best supported: Category 2</h1>
+<body><h1>Category 2: Between values: -100< PSI <100 with N:N+1 between 3-3.4A</h1>
 <h2>PSU: Geometric Correlations</h2>
 <hr/><hr/>
 <table>
