--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -78,7 +78,7 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 </p>
 <p>The geoemetry is compared across "all" and "best supported" data sets. </p>
 
-<p>Note - A category is invented that attempts to split the values up into 5 logical groups.</p>
+<p>Note - Categories based on psi/tau/N:N+1 are invented that attempt to split the values up into logical groups.</p>
 
 <table>
 <tr>
