Added planarity reports

--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -101,6 +101,10 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 </ul>
 
 <hr/>
+<h3>Geometry of dihedral planes</h3>
+<p>The scatter plots below explore the geometry of the data around PSI, OMEGA and the dihedral CA:C:O:N+1 for planarity relations.</p>
+<li><a href="PaperTau/Geometry_PlanarityScatters.html">Geometry comparison: Planarity around tau</a><br/></li>
+<hr/>
 <h3>Electron density of the categories</h3>
 <p>Categories based on psi/tau/N:N+1 are invented that attempt to split the values up into logical groups.</p>
 <p>Taking a selection of residues at the most extreme tau ends in the best supported categories, the electron density is visualised for supporting evidence of the accuracy of the pdb tau calculation.
