Added stats compare reports

--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -151,6 +151,32 @@ The possible causes of variation on the tau angle can be inspected by the sepera
 <li><a href="PaperTau/Set6_ccp4_slices.html">Set 6: Highest resolution with tau differences</a><br/></li>
 </ul>
 <hr/>
+<h3>Statistical comparisons for amino acids and geoemtric measures</h3>
+<p>For each geoemtric measure currently calculated (no limit, but these are what I have to hand) each amino acid is analysed seperately between the best supported and restricted and unrestricted sets.</p>
+<ul>
+<br/>Backbone bond lengths
+<li><a href="PaperTau/StatsCompareC-1_N.html">C-1:N</a><br/></li>
+<li><a href="PaperTau/StatsCompareN_CA.html">N:CA</a><br/></li>
+<li><a href="PaperTau/StatsCompareCA_C.html">CA:C</a><br/></li>
+<li><a href="PaperTau/StatsCompareC_O.html">C:O</a><br/></li>
+<li><a href="PaperTau/StatsCompareC_N+1.html">C:N+1</a><br/></li>
+<br/>Other distances
+<li><a href="PaperTau/StatsCompareN_N+1.html">N:N+1</a><br/></li>
+<li><a href="PaperTau/StatsCompareO_N+1.html">O:N+1</a><br/></li>
+<li><a href="PaperTau/StatsCompareCA_O.html">CA:O</a><br/></li>
+<li><a href="PaperTau/StatsCompareCA_N+1.html">CA:N+1</a><br/></li>
+<li><a href="PaperTau/StatsCompareN_C.html">N:C</a><br/></li>
+<br/>Backbone angles
+<li><a href="PaperTau/StatsCompareC-1_N_CA.html">C-1:N:CA</a><br/></li>
+<li><a href="PaperTau/StatsCompareTAU.html">TAU</a><br/></li>
+<li><a href="PaperTau/StatsCompareCA_C_N+1.html">CA:C:N+1</a><br/></li>
+<br/>Dihedrals
+<li><a href="PaperTau/StatsComparePHI.html">PHI</a><br/></li>
+<li><a href="PaperTau/StatsComparePSI.html">PSI</a><br/></li>
+<li><a href="PaperTau/StatsCompareOMEGA.html">OMEGA</a><br/></li>
+<li><a href="PaperTau/StatsCompareCA_C_O_N+1.html">CA:C:O:N+1</a><br/></li>
+</ul>
+<hr/>
 <p>References</p>
 <li><a href="https://chemistry.mcmaster.ca/aim/aim_0.html">Richard Bader: Atoms in Molecules</a><br/></li>
 <li><a href="https://chemtools.org/sci_doc_dftbased_dens.html">Electron density derivatives</a><br/></li>
