--- a/psumultivarse.html
+++ b/psumultivarse.html
@@ -168,11 +168,10 @@ The speed that these algorithms work at is: Linear time?? Quadratic time?? How d
 <hr/>
 <h3>References</h3>
 <ul>
-<li/>https://www-users.math.umn.edu/~olver/n_/mv.pdf
-<li/>https://www.math.auckland.ac.nz/~waldron/Multivariate/multivariate.html
-<li/>https://www.researchgate.net/publication/2886164_On_Multivariate_Interpolation
-<li/>History: https://www.sciencedirect.com/science/article/pii/S0377042700003538
-<li/>https://www.researchgate.net/publication/329588521_Multivariate_Newton_Interpolation
+<li/><a href="https://www.math.auckland.ac.nz/~waldron/Multivariate/multivariate.html">Auckland Uni Maths Dept "Multivariate polynomial interpolation"</a></li>  
+<li/><a href="https://www-users.math.umn.edu/~olver/n_/mv.pdf">Olver 2016 "On Multivariate Interpolation"</a></li>  
+<li/><a href="https://reader.elsevier.com/reader/sd/pii/S0377042700003538?token=CF7376C18F6E3DAA49EFF954ECDEF416B0AB3455841C3C3738BBD6AFB69C4637F3159FE879FD3D8B8E380A96CD9186B8">Gasca and Sauer 1999, "On the history of multivariate polynomial interpolation"</a></li>  
+<li/><a href="https://www.researchgate.net/publication/329588521_Multivariate_Newton_Interpolation">Hecht et al 2010, "Multivariate Interpolation - lifting the curse of dimensionality"</a></li>  
 </ul>
 <hr/>
 <p style="background-color:tomato;">Contact Rachel by 
