--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -93,7 +93,9 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 <h3>Statistical comparisons for amino acids and geoemtric measures</h3>
 <p>For each geoemtric measure currently calculated (no limit, but these are what I have to hand) each amino acid is analysed seperately between the best supported and restricted and unrestricted sets.</p>
 <p>Histogram report showing Engh and Huber values 1991 and 2001 against best supported values</p>
-<li><a href="PaperTau/BS_EH.html">Best supported versus Engh and Huber</a><br/></li>
+<li><a href="PaperTau/Defensible_EH.html">Defensible atoms versus Engh and Huber (GLY, PRO and other)</a><br/></li>
+<li><a href="PaperTau/Defensible_AA_EH.html">Defensible atoms versus Engh and Huber (each amino acid)</a><br/></li>
+<li><a href="PaperTau/BS_EH.html">Best supported (tau difference 0) versus Engh and Huber (each amino acid)</a><br/></li>
 
 <br/>Backbone bond lengths
 <li><a href="PaperTau/StatsCompareC-1_N.html">C-1:N</a><br/></li>
