--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -91,6 +91,10 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 </p>
 <hr/>
 <h3>Statistical comparisons for amino acids and geoemtric measures</h3>
+<p>Means and sd of E&H compared against my data. 
+My data sets are named, e.g. NCACO_B02 which means atoms of the type N, CA,C or O are guranteed to be a maximum within 0.2 of a grid point. The wider this gets the more permissable. No data is foind at 0.1 of a grid point, a large and good dataset is found at 0.5</p>
+<li><a href="PaperTau/Compare_EH_Sets.html">Defensible means and sd - E&H vs this paper</a><br/></li>
+
 <p>For each geoemtric measure currently calculated (no limit, but these are what I have to hand) each amino acid is analysed seperately between the best supported and restricted and unrestricted sets.</p>
 <p>Histogram report showing Engh and Huber values 1991 and 2001 against best supported values</p>
 <li><a href="PaperTau/Defensible_EH.html">Defensible atoms versus Engh and Huber (GLY, PRO and other)</a><br/></li>
