--- a/tau_radiant.html
+++ b/tau_radiant.html
@@ -115,11 +115,14 @@ Examples: a residue that fails the density test and a residue that passes with o
 <li><a href="PaperTau/Defensible_EH_AA_NCACO_B02.html">Set at 0.2 gridpoint histograms of E&H values</a><br/></li>
 <li><a href="PaperTau/Defensible_EH_AA_NCACO_B05.html">Set at 0.5 gridpoint histograms of E&H values</a><br/></li>
 
-<br/>The radiant pictures below, for planes of N-CA-C and CA-C-O (to cover all atoms in the histograms):
-<li><a href="PaperTau/GoodOutliers_NCACO_B02_NCAC_NCACO_B02.html">Good outliers - N:CA:C plane for 0.2 set</a><br/></li>
-<li><a href="PaperTau/GoodOutliers_NCACO_B02_CACO_NCACO_B02.html">Good outliers - CA:C:O plane for 0.2 set</a><br/></li>
-<li><a href="PaperTau/GoodOutliers_NCACO_B05_NCAC_NCACO_B05.html">Good outliers - N:CA:C plane for 0.5 set</a><br/></li>
-<li><a href="PaperTau/GoodOutliers_NCACO_B05_CACO_NCACO_B05.html">Good outliers - CA:C:O plane for 0.5 set</a><br/></li>
+<br/>The radiant outlier pictures below are per geoemtric measure. Each row has the minimum and maximum per amino acid. Planes are N:CA:C or CA:C:O depending on the geo measure.:
+<li><a href="PaperTau/GoodOutliers_NCACO_B05_CA_C_O.html">CA:C:O outliers for the 0.5 set</a><br/></li>
+<li><a href="PaperTau/GoodOutliers_NCACO_B05_TAU.html">TAU outliers for the 0.5 set</a><br/></li>
+<li><a href="PaperTau/GoodOutliers_NCACO_B05_N-CA.html">N:CA outliers for the 0.5 set</a><br/></li>
+<li><a href="PaperTau/GoodOutliers_NCACO_B02_CA_C.html">CA:C outliers for the 0.2 set</a><br/></li>
+<li><a href="PaperTau/GoodOutliers_NCACO_B02_C_O.html">C:O outliers for the 0.2 set</a><br/></li>
+
+<br/>The rejected residues in 1p1x below demonstrate the lesser quality electron density that has not been accepted into the analysis:
 <li><a href="PaperTau/Bad_1p1x_NCACO_B05_Bad_1p1x_NCACO_B05.html">Rejected residues of 1p1x by the 0.5 set</a><br/></li>
 </p>
 
