--- a/secret.html
+++ b/secret.html
@@ -69,6 +69,8 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 <hr/>
 <h3>Private Links</h3>
 <p>
+<a href="Papers/DefensibleGeometry/GeometryDraft.pdf">Defensible Geometry Draft Document</a><br/>
+<a href="Papers/MultivariateInterpolation/MultivariateInterpolation.pdf">Multivariate Interpolation Draft Document</a><br/>
 <a href="tau_radiant.html">Tau and electron density</a><br/>
 </p>
 <hr/>
