--- a/secret.html
+++ b/secret.html
@@ -72,6 +72,7 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 <a href="Papers/DefensibleGeometry/GeometryDraft.pdf">Defensible Geometry Draft Document</a><br/>
 <a href="Papers/MultivariateInterpolation/MultivariateInterpolation.pdf">Multivariate Interpolation Draft Document</a><br/>
 <a href="tau_radiant.html">Tau and electron density</a><br/>
+<a href="Papers/Summary2021/2021.html">Summary academic year 2020-2021</a><br/>
 </p>
 <hr/>
 <h3>Private Software</h3>
