--- a/Papers/Summary2021/2021.html
+++ b/Papers/Summary2021/2021.html
@@ -90,7 +90,10 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 <p>
 <a href="ScatterAverage1_Compare.html">Scatters of average bond lengths per pdb</a><br/>
 <a href="Fo_Adj_bondsMean.html">Histograms of backbone bond lengths</a><br/>
-
+</p>
+<h3>Differences including against resolution and software</h3>
+<p>
+<a href="Compare_Fo3.html">Differences between reduced and adjusted and hues on resolution and software</a><br/>
 </p>
 <hr/>
 
