--- a/densityflight.html
+++ b/densityflight.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html><html lang="en"><head><link rel="icon" href="Images/atom.png"><title>Rachel Alcraft Density Flight</title>
-<style> 
-body {text-align:left;background-color:LightSteelBlue ;} 
-img {width:95% }
-table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;background-color:LightSteelBlue ;} 
-td {border:1px solid MistyRose;background-color:AliceBlue;}
+<style>
+body {text-align:left;
+	background-color:LightSteelBlue;
+	padding: 9px;
+	} 
+pre {text-align:left;
+		background-color:AliceBlue;
+		padding: 9px;
+		color:Navy} 
+	img {width:98% }
+	table {width:98%;
+	table-layout:fixed;	
+	margin:0 auto;
+	background-color:Snow;	
+	display: table;} 
+td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
+.collapsible {
+  background-color: SkyBlue;
+  color: Black;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: PowderBlue;
+  color: royalblue;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
 </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBH4HKT0NM"></script>
@@ -16,29 +50,36 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </script>
 </head>
 
-<body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<p style="background-color:tomato;">
+<body>
+
+<p style="background-color:LightSlateGray;padding:10px">
    <a href='index.html' title='Home' target='_self'>Home</a>
 ~ <a href='citing.html' title='Citing' target='_self'>Citing</a>
-~ <a href='psubirkbeck.html' title='PsuBirkbeck' target='_self'>PsuBirkbeck</a>
-~ <a href='psugeometry.html' title='PsuGeometry' target='_self'>PsuGeometry</a>
-~ <a href='psudensity.html' title='PsuDensity' target='_self'>PsuDensity</a>
+~ <a href='leucippy.html' title='PsuBirkbeck' target='_self'>LeucipPy</a>
+~ <a href='leucipplus.html' title='PsuBirkbeck' target='_self'>LeucipPlus</a>
 ~ <a href='densityflight.html' title='DensityFlight' target='_self'>DensityFlight</a>
-~ <a href='psumultivarse.html' title='PsuMultivarse' target='_self'>PsuMultivarse</a>
 </p>
 
-<h2>Density Flight</h2>
+
 <hr/>
-<p>Currently, Density Flight is available for Windows 10 machines only. For access to the software,  <a href="mailto:rachelalcraft@gmail.com">email me a request.</a></p>
+<div  style="background-color:tomato;padding:2px">
+<h1>Density Flight: Interactive Electron Density Explorer</h1>
+</div>
+<hr/>
+
+<p>Currently, Density Flight is available for Windows 10 machines only. If you are interested in accessing the software,  <a href="mailto:rachelalcraft@gmail.com">email me a request.</a></p>
 <hr/>
 <img src="DensityFlight/examples/1us0screen.png" alt="Density Flight Screen">
 
 
-<hr/><p style="background-color:tomato;">Contact Rachel by 
-<a href="mailto:rachelalcraft@gmail.com"> email.</a>
-- Return to Rachel's
-<a href='https://rachelalcraft.github.io' title='rachelalcraft.github.io' target='_self'>home page</a> - 
-Notes on citations <a href="citing.html">here</a></br>
+<hr/>
+
+<p style="background-color:LightSlateGray;padding:10px">
+Created by: <a href = "mailto:ralcra01@student.bbk.ac.uk" > Rachel Alcraft </a >
+ ~ Home page: <a href="https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html" title="Leucippus" target="_self">Leucippus</a>
+ ~ Supervisor: <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
+ ~ Birkbeck, University of London (2021)
 </p>
+
 <hr/>
 </body>
