--- a/leucipplus.html
+++ b/leucipplus.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html lang="en"><head><link rel="icon" href="Images/atom.png"><title>Rachel Alcraft Citing</title>
+<!DOCTYPE html><html lang="en"><head><link rel="icon" href="Images/atom.png"><title>LeucipPlus</title>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {text-align:left;
 	background-color:LightSteelBlue;
@@ -49,9 +52,9 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
   gtag('config', 'G-HBH4HKT0NM');
 </script>
 </head>
-
 <body>
 
+<body>
 <p style="background-color:LightSlateGray;padding:10px">
    <a href='index.html' title='Home' target='_self'>Home</a>
 ~ <a href='citing.html' title='Citing' target='_self'>Citing</a>
@@ -61,16 +64,24 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 </p>
 
 <hr/>
-<div  style="background-color:Teal;padding:2px">
-<h1>Citation :  Notes on how to cite this work</h1>
+<div  style="background-color:plum;padding:2px">
+<h1>LeucipPlus :  Atomic Density Explorer</h1>
 </div>
 <hr/>
-
-At the moment, simply refer to the website and projects<br/><br/>
-Rachel Alcraft and Mark A. Williams (September 2020). Birkbeck MSc Thesis. <a href='psubirkbeck.html' title='PsuBirkbeck' target='_self'>https://rachelalcraft.github.io/psubirkbeck.html</a><br/>
-Rachel Alcraft (November 2020). Bioinformatics projects. <a href='index.html' title='Home' target='_self'>https://rachelalcraft.github.io/</a><br/>
+<h3>Summary</h3>
+<p>
+The Leucippus suite consists of the python library LeucipPy and a c++ utility LeucipPlus. 
+<br/>LeucipPlus is primarily concerned with re-refinement, structure factors and electron density.
+<br/>A preliminary version of the integrated environment can be found online as part of my PhD project.
+<br/>The code is entirely under developement and not released.
+<br/>
+<p>
+<a href='https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html' title='Leucippus' target='_self'>Leucippus Homepage (Birkbeck)</a>
+</p>
 
 <hr/>
+
+
 <p style="background-color:LightSlateGray;padding:10px">
 Created by: <a href = "mailto:ralcra01@student.bbk.ac.uk" > Rachel Alcraft </a >
  ~ Home page: <a href="https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html" title="Leucippus" target="_self">Leucippus</a>
@@ -78,5 +89,26 @@ Created by: <a href = "mailto:ralcra01@student.bbk.ac.uk" > Rachel Alcraft </a >
  ~ Birkbeck, University of London (2021)
 </p>
 
+
 <hr/>
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
+
 </body>
+</html>
+
